<resources>



    <string name="app_name">Survey Portal</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_survey_screen">SurveyScreenActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook">Facebook</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="google">Google +</string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="facebook_app_id">224851737882231</string>
    <!--// if your App ID is 1234567, you should use fb1234567-->
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="title_activity_main_screen">Survey Portal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="already_register_login">Already registered? <u>Click here</u></string>
    <string name="title_activity_survey_launcher">Survey Launcher</string>
    <string name="sign_up">Sign Up</string>


    <string name="textview1">Welcome!</string>
    <string name="textview2">Welcome to Creed Global</string>
    <string name="textview3">Create</string>
    <string name="textview4">Create Your Own Surveys</string>
    <string name="textview5">Create your survey and use the insights to make better decisions.</string>
    <string name="button1">Create Survey</string>
    <string name="imageview1">true</string>
    <string name="textview6">Survey Portal</string>
    <string name="textview7">Market Review?</string>
    <string name="textview8">Take feeback,Review it,Make better decisions!</string>
    <string name="title_activity_survey_details">Survey_details</string>
    <string name="edittext3">Enter your Survey Name</string>
    <string name="button0">Done</string>
    <string name="enter_your_question">Enter Your Question</string>
    <string name="title_activity_result">Result</string>
    <string name="submit">Submit</string>
    <string name="our_headquarters">Our Headquarters(India)</string>
    <string name="head_add">Creed Technologies Pvt. Ltd.\n Level 9th, Delta Block,\n Sigma Tech-Park,\n Whitefield Main Road, Whitefield \n Bangalore 560 066.</string>
    <string name="head_us">USA</string>
    <string name="head_usa_add">1200 O St #213,\n Sacramento, CA 95811, \n United States.\n Ph : +1 800 295 9785</string>
    <string name="tel">Tel :</string>
    <string name="tel_phone">+91-80-8848 4807 \n+91-80-4917 7142</string>
    <string name="email">Email :</string>
    <string name="web_add">info@creedglobal.com</string>
    <string name="website">Website :</string>
    <string name="com_web_add">www.creedglobal.com</string>
    <string name="title_activity_support">Support</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_sync">Sync</string>
    <string name="aboutus_content">Survey Portal is easy way to manage all type of survey.
        Can create a survey for your shop, for your office, for yor business.
        Can create your own Survey and take the survey from user,
        capture the result, analyse the result to take a better decision for your Business.
    </string>
    <string name="version">version 1.0.0</string>


</resources>
