<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.creedglobal.survey.surveyportal.fragments.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:id="@+id/linearl1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview2"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="#24b2eb"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:id="@+id/textView2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview6"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="#24b2eb"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:id="@+id/textView8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview7"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:layout_marginLeft="5dp"
            android:id="@+id/textView3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview8"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:id="@+id/textView7"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:id="@+id/linearl2"
        android:layout_below="@+id/linearl1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="#24b2eb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:text="@string/textview4"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/Black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:text="@string/textview5"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:background="@drawable/border_grey_layout"
            android:textStyle="bold"
            android:id="@+id/create_survey"
            android:textSize="22sp"
            android:textColor="@color/DodgerBlue"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:onClick="gotoCreateSurvey" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/home1"
            android:contentDescription="@string/imageview1"
            />
    </LinearLayout>

</RelativeLayout>
