<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
   android:id="@+id/rl"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.creedglobal.survey.surveyportal.Support"
    tools:showIn="@layout/activity_support">
    <!--<RelativeLayout-->
        <!--android:id="@+id/bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!---->
        <!--android:background="#1e090404">-->

        <!--<ImageView-->
            <!--android:id="@+id/btn_menu"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:src="@drawable/menu" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_toRightOf="@id/btn_menu"-->
            <!--android:text="@string/title_contact"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="18sp"-->
            <!--/>-->

        <!--<ImageView-->
            <!--android:id="@+id/btn_user"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:src="@drawable/user" />-->
    <!--</RelativeLayout>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/bar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/corporate_office"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/our_headquarters"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_corporate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/head_add"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/head_us"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_head1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/head_usa_add"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tel"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tel_phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/email_icon"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:text="@string/web_add"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/web"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/com_web_add"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Follow Us:"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="25dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:id="@+id/twitter"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/twitter"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:id="@+id/linkedin"
                            android:src="@drawable/linkedin"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>


